welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: reassignment to val
if(isWeekend=false){if(cigars>39&&cigars<61){return true}else{return false}}
            ^